Fix mobile some more

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,7 +17,8 @@
     <title>I'm doing things 100 times</title>
 
     <style>
-      body { width: 800px; max-width: 100%; margin: auto; padding 0 8px; line-height: 1.8; font-family: sans-serif }
+      body { width: 800px; max-width: 100%; margin: auto; line-height: 1.8; font-family: sans-serif }
+      body > * { margin-left: 16px; margin-right: 16px; }
       .thing-row { border-top: 1px solid #990000; padding-bottom: 12px }
       .thing-row .thing { display: flex; justify-content: space-between; align-items: baseline;}
       .thing-row .thing .count h2 { display: inline }
